--- a/index.html
+++ b/index.html
@@ -4,8 +4,148 @@
     <meta charset="utf-8">
     <title>SilverHand UK</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+
+    <!-------------------------------------
+    Header including navigation bar and logo
+    --------------------------------------->
+
+    <header>
+
+      <nav class="nav">
+
+        <img src="" class="logo" alt="Silver Hand UK Logo">
+
+        <ul class="navList">
+          <li><a href="#">Shop</a></li>
+          <li><a href="#">Our Story</a></li>
+          <li><a href="#">Sell</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+
+      </nav>
+
+    </header>
+
+    <!------------------------------------
+       Home page intro including slides
+    -------------------------------------->
+
+    <div class="intro">
+
+        <!-- Slide Container -->
+
+      <div class="slideContainer">
+        <img src="" class="slide slide1" alt="slide image 1">
+        <img src="" class="slide slide2" alt=" slide image 2">
+        <img src="" class="slide slide3" alt="slide image 3">
+        <img src="" class="slide slide4" alt="slide image 4">
+      </div>
+
+      <!-- SHOP BUTTON -->
+
+      <button type="#" name="button"> <a href="#">Shop</a></button>
+
+      <img src="" alt="silver hand uk logo">
+
+    </div>
+
+    <!----------------------------------
+    Main Section including Men and Women
+    Selections
+    ----------------------------------->
+    <main>
+
+      <!-- Men Collection -->
+      <section class="MenCollection">
+
+        <div class="">
+
+        </div>
+
+        <div class="">
+
+        </div>
+
+        <div class="">
+
+        </div>
+
+        <div class="">
+
+        </div>
+
+        <!-- BRAND SELECTION MEN -->
+        <div class="brandsContainer">
+          <h3>Shop By Brand</h3>
+          <div class="brands">
+
+          </div>
+
+        </div>
+
+        <button type="button" name="button"><a href="#">Shop Men</a></button>
+
+      </section>
+
+      <!-- Women Collection -->
+      <section class="WomenCollection">
+
+        <div class="">
+
+        </div>
+
+        <div class="">
+
+        </div>
+
+        <div class="">
+
+        </div>
+
+        <div class="">
+
+        </div>
+
+        <!-- BRAND SELECTION WOMEN -->
+        <div class="brandsContainer">
+          <h3>Shop By Brand</h3>
+          <div class="brands">
+
+          </div>
+
+        </div>
+
+        <button type="button" name="button"><a href="#">Shop Women</a></button>
+
+      </section>
+    </main>
+
+    <!-----------------------------
+      Customer sell section
+     ----------------------------->
+
+    <div class="Sell">
+
+    </div>
+
+    <!-----------------------------
+          Footer With Icons
+     ----------------------------->
+
+    <footer>
+
+      <h3>Connect with us</h3>
+
+      <!-- ICONS CONTAINER -->
+      <div class="icons">
+
+      </div>
+      <img src="" alt="silver hand uk logo">
+    </footer>
 
   </body>
 </html>
