structured css file layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Header including navigation bar and logo
     --------------------------------------->
 
-    <header>
+    <header class="header">
 
       <nav class="nav">
 
@@ -47,9 +47,9 @@
 
       <!-- SHOP BUTTON -->
 
-      <button type="#" name="button"> <a href="#">Shop</a></button>
+      <button type="#" class="btnShop" name="button"> <a href="#">Shop</a></button>
 
-      <img src="" alt="silver hand uk logo">
+      <img src="" class="logo" alt="silver hand uk logo">
 
     </div>
 
@@ -57,10 +57,10 @@
     Main Section including Men and Women
     Selections
     ----------------------------------->
-    <main>
+    <main class="main">
 
       <!-- Men Collection -->
-      <section class="MenCollection">
+      <section class="MenCollection section">
 
         <div class="">
 
@@ -92,7 +92,7 @@
       </section>
 
       <!-- Women Collection -->
-      <section class="WomenCollection">
+      <section class="WomenCollection section">
 
         <div class="">
 
