--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 
       <!-- ICONS CONTAINER -->
       <div class="icons">
-        <a href="https://twitter.com/SilverHandUK" target="_blank"><i class="fa fa-twitter"></i></a>
-        <a href="https://facebook.com/SilverHandUK" target="_blank"><i class="fa fa-facebook-square"></i></a>
-        <a href="https://instagram.com/SilverHandUK" target="_blank"><i class="fa fa-instagram"></i></a>
+        <a href="https://twitter.com/SilverHandUK" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+        <a href="https://facebook.com/SilverHandUK" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+        <a href="https://instagram.com/SilverHandUK" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
       </div>
       <img src="" alt="silver hand uk logo">
     </footer>
