--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <nav class="nav">
 
-        <img src="" class="logo" alt="Silver Hand UK Logo">
+        <img src="/Images/silverHandsLogo.png" class="logo" alt="Silver Hand UK Logo">
 
         <ul class="navList">
           <li><a href="#">Shop</a></li>
