--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
           Footer With Icons
      ----------------------------->
 
-    <footer>
+    <footer class="footer">
 
+      <div>
       <h3>Connect with us</h3>
 
       <!-- ICONS CONTAINER -->
@@ -146,7 +147,9 @@
         <a href="https://facebook.com/SilverHandUK" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
         <a href="https://instagram.com/SilverHandUK" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
       </div>
+      </div>
       <img src="" alt="silver hand uk logo">
+
     </footer>
 
   </body>
