[AM]: Added company logo in the footer

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <a href="https://instagram.com/SilverHandUK" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
       </div>
       </div>
-      <img src="" alt="silver hand uk logo">
+      <img src="/Images/silverHandsLogo.png" class="logo" alt="silver hand uk logo">
 
     </footer>
 
