--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <footer class="footer">
 
-      <div>
+      <div class="footerHI">
       <h3>Connect with us</h3>
 
       <!-- ICONS CONTAINER -->
