[AM]: Added a h3 tag in the Sell div

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
      ----------------------------->
 
     <div class="Sell">
-
+      <h3>Sell us your unloved trainer</h3>
     </div>
 
     <!-----------------------------
