--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 
       <!-- ICONS CONTAINER -->
       <div class="icons">
-        <a href="https://twitter.com/SilverHandUK" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
-        <a href="https://facebook.com/SilverHandUK" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
-        <a href="https://instagram.com/SilverHandUK" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+        <a href="https://twitter.com/SilverHandUK" title='Twitter' target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+        <a href="https://facebook.com/SilverHandUK" title="Facebook" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+        <a href="https://instagram.com/SilverHandUK" title="Instagram" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
       </div>
       </div>
       <img src="/Images/silverHandsLogo.png" class="logo" alt="silver hand uk logo">
