[AM]: Added slide images 1-3

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <!-- Slide Container -->
 
       <div class="slideContainer">
-        <img src="" class="slide slide1" alt="slide image 1">
-        <img src="" class="slide slide2" alt=" slide image 2">
-        <img src="" class="slide slide3" alt="slide image 3">
+        <img src="/Images/introImage1.jpg" class="slide slide1" alt="slide image 1">
+        <img src="/Images/introImage2.jpg" class="slide slide2" alt=" slide image 2">
+        <img src="/Images/introImage3.jpg" class="slide slide3" alt="slide image 3">
         <img src="" class="slide slide4" alt="slide image 4">
       </div>
 
