[AM]: Added logo to intro section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 
       <button type="#" class="btnShop" name="button"> <a href="#">Shop</a></button>
 
-      <img src="" class="logo" alt="silver hand uk logo">
+      <!-- COMPANY LOGO  -->
+
+      <img src="/Images/silverHandsLogo.png" class="logo" alt="silver hand uk logo">
 
     </div>
 
