[AM]: Modified the layout of the shop now button in the intro section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <!-- SHOP BUTTON -->
 
-      <button type="#" class="btnShop" name="button"> <a href="#">Shop</a></button>
+      <button type="#" class="btnShop" name="button"> <a href="#">Shop Now</a></button>
 
       <!-- COMPANY LOGO  -->
 
