[AM]: Styled shop now button and added hover effect

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <!-- SHOP BUTTON -->
 
-      <button type="#" class="btnShop" name="button"> <a href="#">Shop Now</a></button>
+      <a href="#"><button type="#" class="btnShop" name="button"> Shop Now</button></a>
 
       <!-- COMPANY LOGO  -->
 
