[AM]: Added two direction buttons to operate the slides

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     </header>
 
+
     <!------------------------------------
        Home page intro including slides
     -------------------------------------->
@@ -44,6 +45,11 @@
         <img src="/Images/introImage3.jpg" class="slide slide3" alt="slide image 3">
         <img src="" class="slide slide4" alt="slide image 4">
       </div>
+
+      <!-- Direction buttons -->
+      <a href="#"><button type="button" class="btn-direction btn-prev" name="button"><i class=" fa fa-angle-left"></i></button></a>
+      <a href="#"><button type="button" class="btn-direction btn-next" name="button"><i class=" fa fa-angle-right"></i></button></a>
+
 
       <!-- SHOP BUTTON -->
 
