[AM]: Added a heading and set background colour of both men and women sections

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
       <!-- Men Collection -->
       <section class="MenCollection section">
+        <h3>Men's Collection</h3>
 
         <div class="">
 
@@ -101,6 +102,8 @@
 
       <!-- Women Collection -->
       <section class="WomenCollection section">
+
+        <h3>Women's Collection</h3>
 
         <div class="">
 
@@ -136,7 +139,7 @@
         Customer sell section
      ----------------------------->
 
-    <div class="Sell">
+    <div class="Sell section">
       <h3>Sell us your unloved trainer</h3>
     </div>
 
