[AM]: Added display grid to men section

--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
     <main class="main">
 
       <!-- Men Collection -->
-      <section class="MenCollection section">
+      <section class=" section">
         <h3>Men's Collection</h3>
 
+        <div class="MenCollection">
         <div class="">
 
         </div>
@@ -85,6 +86,7 @@
 
         <div class="">
 
+        </div>
         </div>
 
         <!-- BRAND SELECTION MEN -->
