[AM]: Added an item to mens collection section

--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
           <li><a href="#">Our Story</a></li>
           <li><a href="#">Sell</a></li>
           <li><a href="#">Contact</a></li>
+          <i class="fa fa-cart-plus">
+              <span class="cart-item">0</span>
+            </i>
         </ul>
 
+
+
       </nav>
+
+
 
     </header>
 
@@ -71,23 +78,22 @@
       <section class=" section">
         <h3>Men's Collection</h3>
 
+
+
         <div class="MenCollection">
-        <div class="">
+
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/MaleTrainers/maleTrainer1.jpg" alt="product image">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i>Add to cart</button>
+            </div>
+            <h3></h3>
+            <h4></h4>
+          </article>
 
         </div>
 
-        <div class="">
 
-        </div>
-
-        <div class="">
-
-        </div>
-
-        <div class="">
-
-        </div>
-        </div>
 
         <!-- BRAND SELECTION MEN -->
         <div class="brandsContainer">
@@ -103,17 +109,12 @@
       </section>
 
       <!-- Women Collection -->
-      <section class="WomenCollection section">
+      <section class="section">
 
         <h3>Women's Collection</h3>
 
-        <div class="">
+        <div class="WomenCollection">
 
-        </div>
-
-        <div class="">
-
-        </div>
 
         <div class="">
 
@@ -123,6 +124,14 @@
 
         </div>
 
+        <div class="">
+
+        </div>
+
+        <div class="">
+
+        </div>
+        </div>
         <!-- BRAND SELECTION WOMEN -->
         <div class="brandsContainer">
           <h3>Shop By Brand</h3>
