[AM]: Populated the mens section with products

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <!-- Men Collection -->
       <section class=" section">
-        <h3>Men's Collection</h3>
+        <h3 class="section-title">Men's Collection</h3>
 
 
 
@@ -84,11 +84,74 @@
 
           <article class="product">
             <div class="product-img">
-              <img src="/Images/MaleTrainers/maleTrainer1.jpg" alt="product image">
+              <img src="/Images/MaleTrainers/maleTrainer1.jpg" alt="product image nike airmax 720">
               <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i>Add to cart</button>
             </div>
-            <h3></h3>
-            <h4></h4>
+            <h3>Nike Airmax 720</h3>
+            <h4>£70</h4>
+          </article>
+
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/MaleTrainers/maleTrainer2.jpg" alt="product image nike airforce 1 low">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i>Add to cart</button>
+            </div>
+            <h3>Nike Airforce 1 Low</h3>
+            <h4>£50</h4>
+          </article>
+
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/MaleTrainers/maleTrainer3.jpg" alt="product image nike airforce 1 mid">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i>Add to cart</button>
+            </div>
+            <h3>Nike Airforce 1 Mid</h3>
+            <h4>£65</h4>
+          </article>
+
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/MaleTrainers/maleTrainer4.jpg" alt="product image nike airforce 1 low">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i>Add to cart</button>
+            </div>
+            <h3>Nike Airforce 1 low</h3>
+            <h4>£60</h4>
+          </article>
+
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/MaleTrainers/maleTrainer5.jpg" alt="product image adidas tubular">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i>Add to cart</button>
+            </div>
+            <h3>Adidas Tubular</h3>
+            <h4>£90</h4>
+          </article>
+
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/MaleTrainers/maleTrainer6.jpg" alt="product image">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i>Add to cart</button>
+            </div>
+            <h3>Nike Airforce 1 Low</h3>
+            <h4>£60</h4>
+          </article>
+
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/MaleTrainers/maleTrainer7.jpg" alt="product image nike airforce 1 low">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i>Add to cart</button>
+            </div>
+            <h3>Nike Airforce 1 Low</h3>
+            <h4>£50</h4>
+          </article>
+
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/MaleTrainers/maleTrainer8.jpg" alt="product image nike airmax 95">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i>Add to cart</button>
+            </div>
+            <h3>Nike Airmax 95</h3>
+            <h4>£90</h4>
           </article>
 
         </div>
@@ -97,7 +160,7 @@
 
         <!-- BRAND SELECTION MEN -->
         <div class="brandsContainer">
-          <h3>Shop By Brand</h3>
+          <h3 class="section-title">Shop By Brand</h3>
           <div class="brands">
 
           </div>
@@ -111,7 +174,7 @@
       <!-- Women Collection -->
       <section class="section">
 
-        <h3>Women's Collection</h3>
+        <h3 class="section-title">Women's Collection</h3>
 
         <div class="WomenCollection">
 
@@ -134,7 +197,7 @@
         </div>
         <!-- BRAND SELECTION WOMEN -->
         <div class="brandsContainer">
-          <h3>Shop By Brand</h3>
+          <h3 class="section-title">Shop By Brand</h3>
           <div class="brands">
 
           </div>
