[AM]: Populated women section with product images

--- a/index.html
+++ b/index.html
@@ -178,22 +178,79 @@
 
         <div class="WomenCollection">
 
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/femaleTrainers/femaleTrainer1.jpg" alt="product image nike heel">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
+            </div>
+            <h3>Nike Wedges</h3>
+            <h4>£70</h4>
+          </article>
 
-        <div class="">
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/femaleTrainers/femaleTrainer2.jpg" alt="product image">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
+            </div>
+            <h3>Puma Classic</h3>
+            <h4>£40</h4>
+          </article>
 
-        </div>
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/femaleTrainers/femaleTrainer3.jpg" alt="product image">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
+            </div>
+            <h3>Nike Cortez</h3>
+            <h4>£50</h4>
+          </article>
 
-        <div class="">
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/femaleTrainers/femaleTrainer4.jpg" alt="product image">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
+            </div>
+            <h3>Nike Wedges</h3>
+            <h4>£70</h4>
+          </article>
 
-        </div>
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/femaleTrainers/femaleTrainer5.jpg" alt="product image">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
+            </div>
+            <h3>Dunlop Platform</h3>
+            <h4>£30</h4>
+          </article>
 
-        <div class="">
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/femaleTrainers/femaleTrainer6.jpg" alt="product image">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
+            </div>
+            <h3>Nike Airmax Thea</h3>
+            <h4>£70</h4>
+          </article>
 
-        </div>
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/femaleTrainers/femaleTrainer7.jpg" alt="product image">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
+            </div>
+            <h3>Rebok Mid</h3>
+            <h4>£60</h4>
+          </article>
 
-        <div class="">
+          <article class="product">
+            <div class="product-img">
+              <img src="/Images/femaleTrainers/femaleTrainer8.jpg" alt="product image">
+              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
+            </div>
+            <h3>Adidas Zx Flux</h3>
+            <h4>£70</h4>
+          </article>
 
-        </div>
+
         </div>
         <!-- BRAND SELECTION WOMEN -->
         <div class="brandsContainer">
