[AM]: Added new image icons which replaced nav text

--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
 
     <header class="header">
 
+
+
       <nav class="nav">
+
+        <ul class="navList">
+          <li><a title="Shop" href="#"><img src="/Images/shoppingBag.png" alt=""></a></li>
+          <li><a href="#"><img src="/Images/aboutIcon.png" alt=""></a></li>
+        </ul>
 
         <img src="/Images/silverHandsLogo.PNG" class="logo" alt="Silver Hand UK Logo">
 
         <ul class="navList">
-          <li><a href="#">Shop</a></li>
-          <li><a href="#">Our Story</a></li>
-          <li><a href="#">Sell</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#"><img src="/Images/sellTrainer.png" alt=""></a></li>
+          <li><a href="#"><img src="/Images/contactIcon.png" alt=""></a></li>
           <i class="fa fa-cart-plus">
               <span class="cart-item">0</span>
             </i>
