[AM]: Added functionality to my slides at the intro section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- Font Awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
 
@@ -20,15 +21,15 @@
       <nav class="nav">
 
         <ul class="navList">
-          <li><a title="Shop" href="#"><img src="/Images/shoppingBag.png" alt=""></a></li>
-          <li><a href="#"><img src="/Images/aboutIcon.png" alt=""></a></li>
+          <li><a href="#"><i class="material-icons shopIcon">local_mall</i></a></li>
+          <li><a href="#"><i class="material-icons aboutIcon">view_headline</i></a></li>
         </ul>
 
         <img src="/Images/silverHandsLogo.PNG" class="logo" alt="Silver Hand UK Logo">
 
         <ul class="navList">
-          <li><a href="#"><img src="/Images/sellTrainer.png" alt=""></a></li>
-          <li><a href="#"><img src="/Images/contactIcon.png" alt=""></a></li>
+          <li><a href="#"><i class="material-icons sellIcon">local_atm</i></a></li>
+          <li><a href="#"><i class="material-icons contactIcon">mail</i></a></li>
           <i class="fa fa-cart-plus">
               <span class="cart-item">0</span>
             </i>
@@ -55,7 +56,6 @@
         <img src="/Images/introImage1.jpg" class="slide slide1" alt="slide image 1">
         <img src="/Images/introImage2.jpg" class="slide slide2" alt=" slide image 2">
         <img src="/Images/introImage3.jpg" class="slide slide3" alt="slide image 3">
-        <img src="" class="slide slide4" alt="slide image 4">
       </div>
 
       <!-- COMPANY LOGO  -->
