[AM]: Removed the brand sections after men and women collection also reduced displayed stock to five per section

--- a/index.html
+++ b/index.html
@@ -123,49 +123,32 @@
             <h4>£90</h4>
           </article>
 
-          <article class="product">
-            <div class="product-img">
-              <img src="/Images/MaleTrainers/maleTrainer6.jpg" alt="product image">
-              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
-            </div>
-            <h3>Nike Airforce 1 Low</h3>
-            <h4>£60</h4>
-          </article>
-
-          <article class="product">
-            <div class="product-img">
-              <img src="/Images/MaleTrainers/maleTrainer7.jpg" alt="product image nike airforce 1 low">
-              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
-            </div>
-            <h3>Nike Airforce 1 Low</h3>
-            <h4>£50</h4>
-          </article>
-
-          <article class="product">
-            <div class="product-img">
-              <img src="/Images/MaleTrainers/maleTrainer8.jpg" alt="product image nike airmax 95">
-              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
-            </div>
-            <h3>Nike Airmax 95</h3>
-            <h4>£90</h4>
-          </article>
-
         </div>
 
-
-
-        <!-- BRAND SELECTION MEN -->
-        <div class="brandsContainer">
-          <h3 class="section-title">Shop By Brand</h3>
-          <div class="brands">
-
-          </div>
-
-        </div>
 
         <button type="button" name="button"><a href="#">Shop Men</a></button>
 
       </section>
+
+      <!-----------------------------
+            Middle slides
+       ------------------------------->
+
+      <div class="intro">
+
+          <!-- Slide Container -->
+
+        <div class="slideContainer">
+          <img src="/Images/introImage1.jpg" class="slide slide1" alt="slide image 1">
+          <img src="/Images/introImage2.jpg" class="slide slide2" alt=" slide image 2">
+          <img src="/Images/introImage3.jpg" class="slide slide3" alt="slide image 3">
+        </div>
+
+        <!-- COMPANY LOGO  -->
+
+        <img src="/Images/silverHandsLogo.png" class="logo" alt="silver hand uk logo">
+
+      </div>
 
       <!-- Women Collection -->
       <section class="section">
@@ -219,41 +202,7 @@
             <h4>£30</h4>
           </article>
 
-          <article class="product">
-            <div class="product-img">
-              <img src="/Images/femaleTrainers/femaleTrainer6.jpg" alt="product image">
-              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
-            </div>
-            <h3>Nike Airmax Thea</h3>
-            <h4>£70</h4>
-          </article>
 
-          <article class="product">
-            <div class="product-img">
-              <img src="/Images/femaleTrainers/femaleTrainer7.jpg" alt="product image">
-              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
-            </div>
-            <h3>Rebok Mid</h3>
-            <h4>£60</h4>
-          </article>
-
-          <article class="product">
-            <div class="product-img">
-              <img src="/Images/femaleTrainers/femaleTrainer8.jpg" alt="product image">
-              <button type="button" class="bag-btn" name="button"><i class="fa fa-cart-plus"></i> Add to cart</button>
-            </div>
-            <h3>Adidas Zx Flux</h3>
-            <h4>£70</h4>
-          </article>
-
-
-        </div>
-        <!-- BRAND SELECTION WOMEN -->
-        <div class="brandsContainer">
-          <h3 class="section-title">Shop By Brand</h3>
-          <div class="brands">
-
-          </div>
 
         </div>
 
