--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <!-- Men Collection -->
       <section class=" section">
-        <h3 class="section-title">Men's Collection</h3>
+        <h3 class="section-title">Men's Sole</h3>
 
 
 
@@ -126,7 +126,7 @@
         </div>
 
 
-        <button type="button" name="button"><a href="#">Shop Men</a></button>
+        <button type="button" class="shop-btn" name="button"><a href="#">Find your Sole</a></button>
 
       </section>
 
@@ -153,7 +153,7 @@
       <!-- Women Collection -->
       <section class="section">
 
-        <h3 class="section-title">Women's Collection</h3>
+        <h3 class="section-title">Women's Sole</h3>
 
         <div class="WomenCollection">
 
@@ -206,7 +206,7 @@
 
         </div>
 
-        <button type="button" name="button"><a href="#">Shop Women</a></button>
+        <button type="button" class="shop-btn" name="button"><a href="#">Find your Sole</a></button>
 
       </section>
     </main>
