[AM]: Styled the sell section

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
      ----------------------------->
 
     <div class="Sell section">
-      <h3>Sell us your unloved trainer</h3>
+      <h3>Sell us your Sole</h3>
     </div>
 
     <!-----------------------------
