--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="nav">
 
         <ul class="navList">
-          <li><a href="#"><i class="material-icons shopIcon">local_mall</i></a></li>
+          <li><a class="shopIcon" href="#"><i class="material-icons ">local_mall</i></a></li>
           <li><a href="#"><i class="material-icons aboutIcon">view_headline</i></a></li>
         </ul>
 
@@ -30,9 +30,9 @@
         <ul class="navList">
           <li><a href="#"><i class="material-icons sellIcon">local_atm</i></a></li>
           <li><a href="#"><i class="material-icons contactIcon">mail</i></a></li>
-          <i class="fa fa-cart-plus">
+          <li><i class="fa fa-cart-plus">
               <span class="cart-item">0</span>
-            </i>
+            </i></li>
         </ul>
 
 
