[AM]: Added more slides to slide shows and modified animation to fit in new slides

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         <img src="/Images/introImage1.jpg" class="slide slide1" alt="slide image 1">
         <img src="/Images/introImage2.jpg" class="slide slide2" alt=" slide image 2">
         <img src="/Images/introImage3.jpg" class="slide slide3" alt="slide image 3">
+        <img src="/Images/introImage4.jpg" class="slide slide4" alt="slide image 4">
+        <img src="/Images/introImage5.jpg" class="slide slide5" alt="slide image 5">
       </div>
 
       <!-- COMPANY LOGO  -->
@@ -142,6 +144,8 @@
           <img src="/Images/introImage1.jpg" class="slide slide1" alt="slide image 1">
           <img src="/Images/introImage2.jpg" class="slide slide2" alt=" slide image 2">
           <img src="/Images/introImage3.jpg" class="slide slide3" alt="slide image 3">
+          <img src="/Images/introImage4.jpg" class="slide slide4" alt="slide image 4">
+          <img src="/Images/introImage5.jpg" class="slide slide5" alt="slide image 5">
         </div>
 
         <!-- COMPANY LOGO  -->
