[AM]: Added paragraph and a button to the sell section

--- a/index.html
+++ b/index.html
@@ -220,7 +220,14 @@
      ----------------------------->
 
     <div class="Sell section">
-      <h3>Sell us your Sole</h3>
+      <h3>Sell your Sole</h3>
+
+      <div class="sell-para">
+      <p>Got footwear that you no longer love.</p>
+      <p>Why not sell it to us to earn a few quids</p>
+      </div>
+
+      <button type="button" class="sell-btn" name="button"><a>Sell</a></button>
     </div>
 
     <!-----------------------------
