[AM]: Added app.js to folder and also reconfigured slides

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         <!-- Slide Container -->
 
       <div class="slideContainer">
-        <img src="/Images/introImage1.jpg" class="slide slide1" alt="slide image 1">
-        <img src="/Images/introImage2.jpg" class="slide slide2" alt=" slide image 2">
-        <img src="/Images/introImage3.jpg" class="slide slide3" alt="slide image 3">
-        <img src="/Images/introImage4.jpg" class="slide slide4" alt="slide image 4">
-        <img src="/Images/introImage5.jpg" class="slide slide5" alt="slide image 5">
+        <img src="/Images/introImage1.jpg" class="slide" alt="slide image 1">
+        <img src="/Images/introImage2.jpg" class="slide" alt=" slide image 2">
+        <img src="/Images/introImage3.jpg" class="slide" alt="slide image 3">
+        <img src="/Images/introImage4.jpg" class="slide" alt="slide image 4">
+        <img src="/Images/introImage5.jpg" class="slide" alt="slide image 5">
       </div>
 
       <!-- COMPANY LOGO  -->
@@ -135,24 +135,20 @@
       <!-----------------------------
             Middle slides
        ------------------------------->
+      <div class="middle-slides">
 
-      <div class="intro">
-
-          <!-- Slide Container -->
-
-        <div class="slideContainer">
-          <img src="/Images/introImage1.jpg" class="slide slide1" alt="slide image 1">
-          <img src="/Images/introImage2.jpg" class="slide slide2" alt=" slide image 2">
-          <img src="/Images/introImage3.jpg" class="slide slide3" alt="slide image 3">
-          <img src="/Images/introImage4.jpg" class="slide slide4" alt="slide image 4">
-          <img src="/Images/introImage5.jpg" class="slide slide5" alt="slide image 5">
+        <div class="middle-slide-container">
+          <img src="/Images/introImage1.jpg" class="middle-slide"  alt="slide image1">
+          <img src="/Images/introImage2.jpg" class="middle-slide" alt="slide image2">
+          <img src="/Images/introImage3.jpg" class="middle-slide" alt="slide image3">
+          <img src="/Images/introImage4.jpg" class="middle-slide" alt="slide image4">
+          <img src="/Images/introImage5.jpg" class="middle-slide" alt="slide image5">
         </div>
-
-        <!-- COMPANY LOGO  -->
 
         <img src="/Images/silverHandsLogo.png" class="logo" alt="silver hand uk logo">
 
       </div>
+
 
       <!-- Women Collection -->
       <section class="section">
@@ -227,7 +223,7 @@
       <p>Why not sell it to us to earn a few quids</p>
       </div>
 
-      <button type="button" class="sell-btn" name="button"><a>Sell</a></button>
+      <button type="button" class="sell-btn" name="button"><a>Sell your Sole</a></button>
     </div>
 
     <!-----------------------------
@@ -249,6 +245,10 @@
       <img src="/Images/silverHandsLogo.png" class="logo" alt="silver hand uk logo">
 
     </footer>
+
+    <script src="app.js"></script>
+
+
 
   </body>
 </html>
