[AM]: Added custom tooltips to nav icons

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
         <ul class="navList">
           <li><a class="shopIcon" href="#"><i class="material-icons ">local_mall</i></a></li>
-          <li><a href="#"><i class="material-icons aboutIcon">view_headline</i></a></li>
+          <li><a class="aboutIcon" href="#"><i class="material-icons ">view_headline</i></a></li>
         </ul>
 
         <img src="/Images/silverHandsLogo.PNG" class="logo" alt="Silver Hand UK Logo">
 
         <ul class="navList">
-          <li><a href="#"><i class="material-icons sellIcon">local_atm</i></a></li>
-          <li><a href="#"><i class="material-icons contactIcon">mail</i></a></li>
+          <li><a class="sellIcon" href="#"><i class="material-icons">local_atm</i></a></li>
+          <li><a class="contactIcon" href="#"><i class="material-icons ">mail</i></a></li>
           <li><i class="fa fa-cart-plus">
               <span class="cart-item">0</span>
             </i></li>
