[AM]: Added the link to the contact page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- Font Awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Google Icons link -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
@@ -29,7 +30,7 @@
 
         <ul class="navList">
           <li><a class="sellIcon" href="#"><i class="material-icons">local_atm</i></a></li>
-          <li><a class="contactIcon" href="#"><i class="material-icons ">mail</i></a></li>
+          <li><a class="contactIcon" href="contact.html"><i class="material-icons ">mail</i></a></li>
           <li><i class="fa fa-cart-plus">
               <span class="cart-item">0</span>
             </i></li>
