[AM]:Added and styled footer

--- a/contact.html
+++ b/contact.html
@@ -36,13 +36,39 @@
             </i></li>
         </ul>
 
-
-
       </nav>
 
-
-
     </header>
+
+
+
+      <main class="main">
+      <form action="" class="form">
+
+      </form>
+
+      </main>
+
+
+    <!-----------------------------
+          Footer With Icons
+     ----------------------------->
+
+    <footer class="footer">
+
+      <div class="footerHI">
+      <h3>Connect with us</h3>
+
+      <!-- ICONS CONTAINER -->
+      <div class="icons">
+        <a href="https://twitter.com/SilverHandUK" title='Twitter' target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+        <a href="https://facebook.com/SilverHandUK" title="Facebook" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+        <a href="https://instagram.com/SilverHandUK" title="Instagram" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+      </div>
+      </div>
+      <img src="/Images/silverHandsLogo.png" class="logo" alt="silver hand uk logo">
+
+    </footer>
 
 
   </body>
