[AM]: Added and styled contact icon divs

--- a/contact.html
+++ b/contact.html
@@ -40,12 +40,35 @@
 
     </header>
 
-
+    <!--------------------------
+        Main section including
+               Icons
+      ------------------------->
 
       <main class="main">
-      <form action="" class="form">
 
-      </form>
+      <h1 class="page-title">Contact</h1>
+
+      <div class="icon">
+        <a href=""><i class="fa fa-facebook fa-3x"></i></a>
+      </div>
+
+      <div class="icon">
+        <a href=""><i class="fa fa-instagram fa-3x"></i></a>
+      </div>
+
+      <div class="icon">
+        <a href=""><i class="fa fa-twitter fa-3x"></i></a>
+      </div>
+
+      <div class="icon">
+        <a href=""><i class="fa fa-envelope fa-3x"></i></a>
+      </div>
+
+      <div class="icon">
+        <a href=""><i class="fa fa-phone fa-3x"></i></a>
+      </div>
+
 
       </main>
 
