[AM]: Added comment form to contact page

--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,32 @@
         <a href=""><i class="fa fa-phone fa-3x"></i></a>
       </div>
 
+      <form action="" class="comment-form">
+        <h1 class="form-title">Comments</h1>
+
+        <div class="first-name-section">
+          <label for="first-name" class="first-name-lable">First Name</label>
+          <input id="firt-name" type="text" placeholder="First Name" class="first-name">
+        </div>
+
+        <div class="second-name-section">
+          <label for="second-name" class="second-name">Second Name</label>
+          <input id="second-name" placeholder="Second Name" type="text" class="second-name">
+        </div>
+
+        <div class="email-section">
+          <label for="email" class="email">Email</label>
+           <input type="email" id="email" placeholder="john.doe@email.com" class="email">
+        </div>
+
+        <div class="comment-section">
+          <label for="comment" class="comment-label">Comment</label>
+           <textarea name="" id="comment" cols="30" rows="10" class="comment"></textarea>
+        </div>
+
+        <input type="submit" class="submit-btn">
+      </form>
+
 
       </main>
 
