--- a/contact.html
+++ b/contact.html
@@ -69,27 +69,31 @@
         <a href=""><i class="fa fa-phone fa-3x"></i></a>
       </div>
 
+      <!----------------------
+            comment form
+         -------------------->
+
       <form action="" class="comment-form">
         <h1 class="form-title">Comments</h1>
 
-        <div class="first-name-section">
+        <div class="first-name-section form-section">
           <label for="first-name" class="first-name-lable">First Name</label>
-          <input id="firt-name" type="text" placeholder="First Name" class="first-name">
+          <input id="firt-name" type="text" required placeholder="First Name" class="first-name">
         </div>
 
-        <div class="second-name-section">
+        <div class="second-name-section form-section">
           <label for="second-name" class="second-name">Second Name</label>
-          <input id="second-name" placeholder="Second Name" type="text" class="second-name">
+          <input id="second-name" placeholder="Second Name" required type="text" class="second-name">
         </div>
 
-        <div class="email-section">
+        <div class="email-section form-section">
           <label for="email" class="email">Email</label>
-           <input type="email" id="email" placeholder="john.doe@email.com" class="email">
+           <input type="email" id="email" required placeholder="john.doe@email.com" class="email">
         </div>
 
-        <div class="comment-section">
+        <div class="comment-section form-section">
           <label for="comment" class="comment-label">Comment</label>
-           <textarea name="" id="comment" cols="30" rows="10" class="comment"></textarea>
+           <textarea name="comment" placeholder="Please leave a comment..." id="comment" cols="30" rows="10" class="comment"></textarea>
         </div>
 
         <input type="submit" class="submit-btn">
