[AM]: Added links to the about page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <ul class="navList">
           <li><a class="shopIcon" href="#"><i class="material-icons ">local_mall</i></a></li>
-          <li><a class="aboutIcon" href="#"><i class="material-icons ">view_headline</i></a></li>
+          <li><a class="aboutIcon" href="about.html"><i class="material-icons ">view_headline</i></a></li>
         </ul>
 
         <img src="/Images/silverHandsLogo.PNG" class="logo" alt="Silver Hand UK Logo">
