--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
         <ul class="navList">
           <li><a class="sellIcon" href="#"><i class="material-icons">local_atm</i></a></li>
-          <li><a class="aboutIcon" href="#"><i class="material-icons ">view_headline</i></a></li>
+          <li><a class="aboutIcon" href="about.html"><i class="material-icons ">view_headline</i></a></li>
           <li><i class="fa fa-cart-plus">
               <span class="cart-item">0</span>
             </i></li>
